# pprompt

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  meson.build  pprompt.desktop  pprompt.pc.in  sshpwd.py  sshpwd.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: meson.build  pprompt.desktop  pprompt.sh
debian/: changelog  control  copyright  pprompt.install  pprompt.postinst  pprompt.prerm  rules
po/: LINGUAS  POTFILES.in  en_GB.po  hy.po  it.po  ja.po  ko.po  pprompt.pot  sk.po  zh_CN.po
src/: Makefile.am  Makefile.in  pprompt.c
